Stub deployment pool management

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -24,6 +24,7 @@ services:
     hal.application:     { synthetic: true }
     hal.deployment:      { synthetic: true }
     hal.encrypted:       { synthetic: true }
+    hal.environment:     { synthetic: true }
 
     ######################################################################################################################
     # DOCTRINE CONFIGURATION
