--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -165,6 +165,17 @@ services:
             - @session.flasher
             - @hal.deployment
 
+    pools.page:
+        class: 'QL\Hal\Controllers\Application\Pool\PoolsController'
+        arguments:
+            - @pools.twig
+            - @doctrine.em
+            - @hal.application
+            - @hal.environment
+    pools.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/pools.twig']]]
+
     ####################################################################################################################
     # ENCRYPTED PROPERTIES CONTROLLERS
     ####################################################################################################################
