--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -165,6 +165,10 @@ services:
             - @session.flasher
             - @hal.deployment
 
+    ####################################################################################################################
+    # POOL CONTROLLERS
+    ####################################################################################################################
+
     pools.page:
         class: 'QL\Hal\Controllers\Application\Pool\PoolsController'
         arguments:
@@ -175,6 +179,106 @@ services:
     pools.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['application/pool/pools.twig']]]
+
+    deployment_view.add.page:
+        class: 'QL\Hal\Controllers\Application\Pool\AddViewController'
+        arguments:
+            - @deployment_view.add.twig
+            - @slim.request
+            - @session.flasher
+            - @doctrine.random
+            - @doctrine.em
+            - @hal.application
+            - @hal.environment
+    deployment_view.add.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/view.add.twig']]]
+
+    deployment_view.page:
+        class: 'QL\Hal\Controllers\Application\Pool\ViewController'
+        arguments:
+            - @deployment_view.twig
+            - @doctrine.em
+            - @hal.view
+    deployment_view.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/view.twig']]]
+
+    deployment_view.edit.page:
+        class: 'QL\Hal\Controllers\Application\Pool\EditViewController'
+        arguments:
+            - @deployment_view.edit.twig
+            - @slim.request
+            - @session.flasher
+            - @doctrine.em
+            - @hal.view
+    deployment_view.edit.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/view.edit.twig']]]
+
+
+    deployment_view.remove.handler:
+        class: 'QL\Hal\Controllers\Application\Pool\RemoveViewHandler'
+        arguments:
+            - @doctrine.em
+            - @session.flasher
+            - @hal.view
+
+    pool.add.page:
+        class: 'QL\Hal\Controllers\Application\Pool\AddPoolController'
+        arguments:
+            - @pool.add.twig
+            - @slim.request
+            - @session.flasher
+            - @doctrine.random
+            - @doctrine.em
+            - @hal.view
+    pool.add.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/pool.add.twig']]]
+
+    pool.edit.page:
+        class: 'QL\Hal\Controllers\Application\Pool\EditPoolController'
+        arguments:
+            - @pool.edit.twig
+            - @slim.request
+            - @session.flasher
+            - @doctrine.em
+            - @hal.view
+            - @hal.pool
+    pool.edit.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['application/pool/pool.edit.twig']]]
+
+    pool.remove.handler:
+        class: 'QL\Hal\Controllers\Application\Pool\RemovePoolHandler'
+        arguments:
+            - @doctrine.em
+            - @session.flasher
+            - @hal.view
+            - @hal.pool
+
+    pool.deployment.add.handler:
+        class: 'QL\Hal\Controllers\Application\Pool\Deployment\AddHandler'
+        arguments:
+            - @slim.request
+            - @slim.response
+            - @session.flasher
+            - @slim.halt
+            - @json
+            - @doctrine.em
+            - @hal.view
+            - @hal.pool
+
+    pool.deployment.remove.handler:
+        class: 'QL\Hal\Controllers\Application\Pool\Deployment\RemoveHandler'
+        arguments:
+            - @slim.request
+            - @slim.response
+            - @session.flasher
+            - @doctrine.em
+            - @hal.pool
+            - @hal.deployment
 
     ####################################################################################################################
     # ENCRYPTED PROPERTIES CONTROLLERS
