--- a/configuration/routes/routes.application.yml
+++ b/configuration/routes/routes.application.yml
@@ -107,6 +107,91 @@ parameters:
                 application: %routes.regex.digit%
                 environment: %routes.regex.digit%
 
+        deployment_view.add:
+            route: '/applications/:application/environments/:environment/pools/add'
+            stack: ['middleware.login', 'middleware.requireEntity', 'deployment_view.add.page']
+            conditions:
+                application: %routes.regex.digit%
+                environment: %routes.regex.digit%
+
+        deployment_view:
+            route: '/deployment-views/:view'
+            stack: ['middleware.login', 'middleware.requireEntity', 'deployment_view.page']
+            conditions:
+                view: %routes.regex.guid%
+
+        deployment_view.edit:
+            route: '/deployment-views/:view/edit'
+            stack: ['middleware.login', 'middleware.requireEntity', 'deployment_view.edit.page']
+            conditions:
+                view: %routes.regex.guid%
+
+        deployment_view.remove.confirm:
+            method: 'GET'
+            route: '/deployment-views/:view/remove'
+            stack: ['middleware.login', 'middleware.requireEntity', 'delete.confirm.page']
+            conditions:
+                view: %routes.regex.guid%
+        deployment_view.remove:
+            method: 'POST'
+            route: '/deployment-views/:view/remove'
+            stack: ['middleware.login', 'middleware.requireEntity', 'deployment_view.remove.handler']
+            conditions:
+                view: %routes.regex.guid%
+
+        pool.add:
+            route: '/deployment-views/:view/pools/add'
+            stack: ['middleware.login', 'middleware.requireEntity', 'pool.add.page']
+            conditions:
+                view: %routes.regex.guid%
+
+        pool.edit:
+            route: '/deployment-views/:view/pools/:pool/edit'
+            stack: ['middleware.login', 'middleware.requireEntity', 'pool.edit.page']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+
+        pool.remove.confirm:
+            method: 'GET'
+            route: '/deployment-views/:view/pools/:pool/remove'
+            stack: ['middleware.login', 'middleware.requireEntity', 'delete.confirm.page']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+        pool.remove:
+            method: 'POST'
+            route: '/deployment-views/:view/pools/:pool/remove'
+            stack: ['middleware.login', 'middleware.requireEntity', 'pool.remove.handler']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+
+        pool.deployment.add:
+            method: 'POST'
+            route: '/deployment-views/:view/pools/:pool/add'
+            stack: ['middleware.login', 'middleware.requireEntity', 'pool.deployment.add.handler']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+
+        pool.deployment.remove.confirm:
+            method: 'GET'
+            route: '/deployment-views/:view/pools/:pool/remove/:deployment'
+            stack: ['middleware.login', 'middleware.requireEntity', 'delete.confirm.page']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+                deployment: %routes.regex.digit%
+        pool.deployment.remove:
+            method: 'POST'
+            route: '/deployment-views/:view/pools/:pool/remove/:deployment'
+            stack: ['middleware.login', 'middleware.requireEntity', 'pool.deployment.remove.handler']
+            conditions:
+                view: %routes.regex.guid%
+                pool: %routes.regex.guid%
+                deployment: %routes.regex.digit%
+
         ################################################################################################################
         # REPOSITORY ENCRYPTED PROPERTIES ROUTES
         ################################################################################################################
