--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,24 @@
     ],
 
     "require": {
+        "php-64bit": "~5.5",
+
+        "ext-curl": "*",
+        "ext-ldap": "*",
+        "ext-libsodium": "*",
+        "ext-mbstring": "*",
+        "ext-mcrypt": "*",
+        "ext-openssl": "*",
+        "ext-pdo": "*",
+        "ext-pdo_mysql": "*",
+        "ext-pdo_sqlite": "*",
+        "ext-xmlwriter": "*",
+
         "aws/aws-sdk-php": "2.7.*",
         "doctrine/orm": "~2.5",
         "guzzle/guzzle": "3.9.*",
         "guzzlehttp/guzzle": "5.*",
         "knplabs/github-api": "1.3.1",
-        "php-64bit": "~5.5",
         "predis/predis": "~1.0",
         "psr/log": "*",
 
