--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -266,6 +266,7 @@ services:
             - @session.flasher
             - @slim.halt
             - @json
+            - @url
             - @doctrine.em
             - @hal.view
             - @hal.pool
