Update view handler to not clone dom elements, which allows persistence of event handlers

--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -50,6 +50,8 @@ services:
             - @slim.request
             - @session.flasher
             - @sticky.view
+            - @slim.response
+            - @json
             - @hal.application
             - @hal.environment
 
