--- a/configuration/routes/routes.application.yml
+++ b/configuration/routes/routes.application.yml
@@ -33,10 +33,10 @@ parameters:
             stack: ['middleware.lead', 'middleware.requireEntity', 'application.edit.page']
             conditions: {application: %routes.regex.digit%}
 
-        application.sticky.view:
+        application.sticky.pool:
             method: 'POST'
             route: '/applications/:application/environments/:environment'
-            stack: ['middleware.login', 'middleware.requireEntity', 'application.sticky.view.handler']
+            stack: ['middleware.login', 'middleware.requireEntity', 'application.sticky.pool.handler']
             conditions:
                 application: %routes.regex.digit%
                 environment: %routes.regex.digit%
