Display selected view on pool page

--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -186,6 +186,7 @@ services:
         class: 'QL\Hal\Controllers\Application\Pool\PoolsController'
         arguments:
             - @pools.twig
+            - @sticky.pool
             - @doctrine.em
             - @hal.application
             - @hal.environment
