--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "ql/panthor":           "~2.1",
         "ql/uri-template":      "~1.0",
 
-        "slim/slim": "2.4.*",
+        "slim/slim": "~2.6",
         "sensiolabs/ansi-to-html": "~1.1",
 
         "symfony/dependency-injection": "~2.7",
