Add credential management, s3 server type, s3 deploy details

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -22,9 +22,11 @@ services:
     hal.userPermission:  { synthetic: true }
 
     hal.application:     { synthetic: true }
+    hal.credential:      { synthetic: true }
     hal.deployment:      { synthetic: true }
     hal.encrypted:       { synthetic: true }
     hal.environment:     { synthetic: true }
+    hal.server:          { synthetic: true }
 
     hal.view:            { synthetic: true }
     hal.pool:            { synthetic: true }
