--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "bower_components"
     ],
     "dependencies": {
+        "favico.js": "~0.3",
         "jquery": "2.1.3",
         "jquery-searchable": "1.1.0",
         "html5sortable": "*",
