--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -137,12 +137,26 @@ parameters:
             route: '/api/applications/:id/builds'
             stack: ['middleware.api.cached', 'api.builds']
             conditions: {id: %routes.api.regex.digit%}
+        api.builds.history:
+            method: 'GET'
+            route: '/api/applications/:id/builds/page/:page'
+            stack: ['middleware.api.cached', 'api.builds']
+            conditions:
+                id: %routes.api.regex.digit%
+                page: %routes.api.regex.digit%
 
         api.pushes:
             method: 'GET'
             route: '/api/applications/:id/pushes'
             stack: ['middleware.api.cached', 'api.pushes']
             conditions: {id: %routes.api.regex.digit%}
+        api.pushes.history:
+            method: 'GET'
+            route: '/api/applications/:id/pushes/page/:page'
+            stack: ['middleware.api.cached', 'api.pushes']
+            conditions:
+                id: %routes.api.regex.digit%
+                page: %routes.api.regex.digit%
 
         api.queue:
             method: 'GET'
