--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -43,6 +43,11 @@ parameters:
             method: 'GET'
             route: '/api/servers'
             stack: ['middleware.api.cached', 'api.servers']
+        api.servers.paged:
+            method: 'GET'
+            route: '/api/servers/page/:page'
+            stack: ['middleware.api.cached', 'api.servers']
+            conditions: {page: %routes.api.regex.digit%}
 
         api.server:
             method: 'GET'
@@ -65,6 +70,11 @@ parameters:
             method: 'GET'
             route: '/api/users'
             stack: ['middleware.api.cached', 'api.users']
+        api.users.paged:
+            method: 'GET'
+            route: '/api/users/page/:page'
+            stack: ['middleware.api.cached', 'api.users']
+            conditions: {page: %routes.api.regex.digit%}
 
         api.user:
             method: 'GET'
