Automatically make a user a lead when creating an app

--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -61,8 +61,11 @@ services:
             - @application.add.twig
             - @doctrine.em
             - @github
+            - @permissions
             - @session.flasher
             - @slim.request
+            - @currentUser
+            - @doctrine.random
     application.add.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['application/application.add.twig']]]
